# banana_agi

./: .gitignore  pyproject.toml
chatbot-app/: gemini-client.js  package-lock.json  package.json  server.js
chatbot-app/public/: index.html  script.js  styles.css
chatbot-app/tests/: gemini-client.test.js  server.test.js
src/banana_agi/: __init__.py  dataset_loader.py  gemini_launcher.py  solver.py
tests/: test_image_to_grid_extraction.py
